--- a/PatrickT-Assignment-1/Views/Shared/_Layout.cshtml
+++ b/PatrickT-Assignment-1/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EquipmentListings">Equipment Listings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AllListings">Equipment Listings</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AvailableEquipment">Available Equipment</a>
