Added id to the request model, and displayed request details on the confirmation page

--- a/PatrickT-Assignment-1/Views/Home/Confirmation.cshtml
+++ b/PatrickT-Assignment-1/Views/Home/Confirmation.cshtml
@@ -5,3 +5,15 @@
 
 <h1>Thank you, @Model?.Name!</h1>
 <p>The request has been submitted, and IT will be in touch soon!</p>
+
+<h2>Request Details: </h2>
+<ul>
+    <li>Request ID: @Model?.Id</li>
+    <li>Name: @Model?.Name</li>
+    <li>Email: @Model?.Email</li>
+    <li>Phone Number: @Model?.PhoneNumber</li>
+    <li>Role: @Model?.Role</li>
+    <li>Equipment Type: @Model?.EquipmentType</li>
+    <li>Request Details: @Model?.RequestDetails</li>
+    <li>Duration: @Model?.Duration days</li>
+</ul>
