--- a/PatrickT-Assignment-1/Views/Home/RequestForm.cshtml
+++ b/PatrickT-Assignment-1/Views/Home/RequestForm.cshtml
@@ -31,7 +31,7 @@
         </div>
         <div>
             <label asp-for="EquipmentType">Equipment Type</label>
-            <select asp-for="EquipmentType" asp-items="Html.GetEnumSelectList<Equipment>()">
+            <select asp-for="EquipmentType" asp-items="Html.GetEnumSelectList<EquipmentOptions>()">
             </select>
         </div>
         <div>
