Added available equipment to the available equipment page

--- a/PatrickT-Assignment-1/Views/Home/AvailableEquipment.cshtml
+++ b/PatrickT-Assignment-1/Views/Home/AvailableEquipment.cshtml
@@ -1,4 +1,5 @@
-﻿﻿@{
+﻿@model IEnumerable<PatrickT_Assignment_1.Models.Equipment>﻿
+@{
     ViewData["Title"] = "Available Equipment";
 }
 
@@ -8,4 +9,24 @@
         The purpose of this application is to allow FAST students and professors to request IT equipment.
         This page lists all equipment available to request.
     </p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Description</th>
+                <th>Availability</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var equipment in Model.Where(e => e.Available))
+            {
+                <tr>
+                    <td>@equipment.Id</td>
+                    <td>@equipment.Description</td>
+                    <td>Available</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
