--- a/PatrickT-Assignment-1/Views/Home/AvailableEquipment.cshtml
+++ b/PatrickT-Assignment-1/Views/Home/AvailableEquipment.cshtml
@@ -9,7 +9,7 @@
         This page lists all equipment available to request.
     </p>
 
-    <table class="table">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
