--- a/PatrickT-Assignment-1/Views/Home/Requests.cshtml
+++ b/PatrickT-Assignment-1/Views/Home/Requests.cshtml
@@ -10,7 +10,7 @@
     </p>
 </div>
 
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>Id</th>
@@ -36,7 +36,7 @@
                 <td>@request.EquipmentType</td>
                 <td>@request.RequestDetails</td>
                 <td>@request.Duration days</td>
-                <td><button>Accept</button> <button>Deny</button></td>
+                <td><button class="btn-primary">Accept</button> <button class="btn-danger">Deny</button></td>
             </tr>
         }
     </tbody>
